@@ -8,6 +8,8 @@ pyroscope (0.3.7) hardy; urgency=low
   * rtcontrol: added option "--from-view" (default is still "main")
   * rtcontrol: exit with return code 44 when the selection is empty
     (think "404 NOT FOUND", but then exit codes should be < 256)
+  * Added common --cron option that activates logging into the file
+    ./log/cron.log in the configuration directory
 
  -- pyroscope <pyroscope.project@gmail.com>  Mon, 30 Aug 2010 00:12:30 +0200
 
